--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "requirejs": "^2.3.6",
+    "requirejs-text": "~2.0.10",
     "backbone": "^1.1.2",
     "backbone-validation": "^0.11.5",
     "backbone.localstorage": "^1.1.16",
@@ -14,7 +16,7 @@
     "jquery": "^2.1.1",
     "jquery-ui": "^1.12.1",
     "lodash": "^4.17.20",
-    "requirejs": "^2.3.6"
+
   },
   "devDependencies": {},
   "scripts": {
