--- a/package.json
+++ b/package.json
@@ -5,18 +5,17 @@
   "main": "server.js",
   "dependencies": {
     "requirejs": "^2.3.6",
-    "requirejs-text": "~2.0.10",
     "backbone": "^1.1.2",
     "backbone-validation": "^0.11.5",
     "backbone.localstorage": "^1.1.16",
     "backbone.paginator": "^2.0.0",
+    "backbone.layoutmanager": "~0.9.5",
     "connect": "^3.7.0",
     "dust": "^0.3.0",
     "dustjs-linkedin": "^2.7.5",
     "jquery": "^2.1.1",
     "jquery-ui": "^1.12.1",
-    "lodash": "^4.17.20",
-
+    "lodash": "^4.17.20"
   },
   "devDependencies": {},
   "scripts": {
